# quiz-to-audio

./: .gitignore  AGENTS.md  README.md  add_album_title.py  addnumber.py  audio.py  change_speed.py  copy_all_ears_podcast.py  join.py  make_beep.py  playground.ipynb  polly.py  pyproject.toml  quiz2audio.py  requirements.txt  split.py  trim.py  trim_silence.py  tts.py
src/quiz_to_audio/: cli.py  quiz_parser.py  quiz_tts.py
tests/: test_quiz2audio_e2e.py
