[project]
name = "quiz-to-audio"
version = "0.1.0"
description = "Quiz text to audio converter (TTS + sectioning)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "speech-audio-tools",
]

[tool.uv.sources]
speech-audio-tools = { git = "ssh://git@github.com/mshattori/speech-audio-tools.git" }

[project.scripts]
quiz2audio = "quiz_to_audio.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quiz_to_audio"]

[project.optional-dependencies]
test = ["pytest>=8.3.3"]
